Não mudou muita coisa...

--- a/AppList/AppList/Base.lproj/Main.storyboard
+++ b/AppList/AppList/Base.lproj/Main.storyboard
@@ -22,9 +22,6 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
-                                <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
-                                    <rect key="frame" x="187" y="48" width="46" height="21"/>
-                                </variation>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Categoria" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6IE-mt-SnJ">
                                 <rect key="frame" x="263" y="159" width="75" height="21"/>
@@ -59,6 +56,9 @@
                                 <rect key="frame" x="104" y="231" width="375" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
+                                <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="104" y="231" width="175" height="30"/>
+                                </variation>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EE7-K2-19q">
                                 <rect key="frame" x="345" y="520" width="46" height="30"/>
@@ -83,6 +83,7 @@
                             <constraint firstAttribute="trailingMargin" secondItem="CfA-VW-zgn" secondAttribute="trailing" constant="259" id="3Vw-7f-NEg"/>
                             <constraint firstItem="EE7-K2-19q" firstAttribute="top" secondItem="pKR-Hy-jaa" secondAttribute="bottom" constant="153" id="3gW-kj-YEz"/>
                             <constraint firstItem="CfA-VW-zgn" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="25" id="5QA-9C-1vE"/>
+                            <constraint firstItem="CfA-VW-zgn" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="171" id="6zh-4r-c4y"/>
                             <constraint firstItem="pKR-Hy-jaa" firstAttribute="top" secondItem="6IE-mt-SnJ" secondAttribute="bottom" constant="141" id="7QM-og-cXh"/>
                             <constraint firstItem="6IE-mt-SnJ" firstAttribute="top" secondItem="CfA-VW-zgn" secondAttribute="bottom" constant="93" id="7Ry-Wc-4PG"/>
                             <constraint firstItem="35z-o5-Tlg" firstAttribute="top" secondItem="6IE-mt-SnJ" secondAttribute="bottom" constant="52" id="Cs8-Tl-0cL"/>
@@ -93,7 +94,9 @@
                             <constraint firstItem="EE7-K2-19q" firstAttribute="leading" secondItem="laT-Ly-PIN" secondAttribute="trailing" constant="130" id="IxI-WC-Ub2"/>
                             <constraint firstAttribute="trailingMargin" secondItem="35z-o5-Tlg" secondAttribute="trailing" constant="105" id="Kuu-bJ-szC"/>
                             <constraint firstItem="3Yo-PL-Xfg" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="88" id="NvX-1S-qnv"/>
+                            <constraint firstItem="CfA-VW-zgn" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="28" id="P8C-NV-nJF"/>
                             <constraint firstAttribute="trailingMargin" secondItem="3Yo-PL-Xfg" secondAttribute="trailing" constant="105" id="S8H-bh-fU3"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="CfA-VW-zgn" secondAttribute="trailing" constant="151" id="SRd-32-LqA"/>
                             <constraint firstAttribute="trailingMargin" secondItem="EE7-K2-19q" secondAttribute="trailing" constant="69" id="SUv-9q-aYx"/>
                             <constraint firstAttribute="trailingMargin" secondItem="6IE-mt-SnJ" secondAttribute="trailing" constant="246" id="TG0-DQ-kIg"/>
                             <constraint firstItem="EE7-K2-19q" firstAttribute="leading" secondItem="laT-Ly-PIN" secondAttribute="trailing" constant="81" id="WUW-51-3Di"/>
@@ -114,27 +117,36 @@
                             <constraint firstAttribute="trailingMargin" secondItem="EE7-K2-19q" secondAttribute="trailing" constant="193" id="tXC-9q-S6g"/>
                             <constraint firstItem="laT-Ly-PIN" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="180" id="tki-2r-5Dw"/>
                             <constraint firstAttribute="trailingMargin" secondItem="pKR-Hy-jaa" secondAttribute="trailing" constant="69" id="vAU-x6-6ag"/>
+                            <constraint firstItem="3Yo-PL-Xfg" firstAttribute="top" secondItem="CfA-VW-zgn" secondAttribute="bottom" constant="40" id="xaK-2p-rmN"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="EE7-K2-19q" secondAttribute="bottom" constant="35" id="yGi-tc-HtY"/>
                             <constraint firstItem="6IE-mt-SnJ" firstAttribute="top" secondItem="CfA-VW-zgn" secondAttribute="bottom" constant="93" id="yyl-8d-Taa"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
+                                <exclude reference="xaK-2p-rmN"/>
+                                <exclude reference="6zh-4r-c4y"/>
+                                <exclude reference="P8C-NV-nJF"/>
+                                <exclude reference="SRd-32-LqA"/>
                                 <exclude reference="11a-Fq-DMU"/>
                                 <exclude reference="Ik7-B0-8M6"/>
                                 <exclude reference="vAU-x6-6ag"/>
                                 <exclude reference="2Es-G4-PJH"/>
-                                <exclude reference="GHk-r5-DrL"/>
-                                <exclude reference="yGi-tc-HtY"/>
                                 <exclude reference="3gW-kj-YEz"/>
                                 <exclude reference="IxI-WC-Ub2"/>
                                 <exclude reference="SUv-9q-aYx"/>
                                 <exclude reference="Wig-CA-USw"/>
                                 <exclude reference="izB-u5-LFc"/>
                                 <exclude reference="nRL-7n-Jsx"/>
+                                <exclude reference="GHk-r5-DrL"/>
+                                <exclude reference="yGi-tc-HtY"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=regular-widthClass=compact">
                             <mask key="constraints">
+                                <include reference="xaK-2p-rmN"/>
+                                <include reference="6zh-4r-c4y"/>
+                                <include reference="P8C-NV-nJF"/>
+                                <include reference="SRd-32-LqA"/>
                                 <include reference="11a-Fq-DMU"/>
                                 <exclude reference="7QM-og-cXh"/>
                                 <exclude reference="Ik7-B0-8M6"/>
@@ -144,10 +156,6 @@
                                 <include reference="vAU-x6-6ag"/>
                                 <exclude reference="15J-P8-oDr"/>
                                 <exclude reference="2Es-G4-PJH"/>
-                                <exclude reference="GHk-r5-DrL"/>
-                                <exclude reference="gtC-Qv-V56"/>
-                                <exclude reference="smX-cW-t9P"/>
-                                <include reference="yGi-tc-HtY"/>
                                 <include reference="3gW-kj-YEz"/>
                                 <exclude reference="IxI-WC-Ub2"/>
                                 <exclude reference="SUv-9q-aYx"/>
@@ -158,6 +166,10 @@
                                 <exclude reference="izB-u5-LFc"/>
                                 <exclude reference="nRL-7n-Jsx"/>
                                 <exclude reference="tXC-9q-S6g"/>
+                                <exclude reference="GHk-r5-DrL"/>
+                                <exclude reference="gtC-Qv-V56"/>
+                                <exclude reference="smX-cW-t9P"/>
+                                <include reference="yGi-tc-HtY"/>
                             </mask>
                         </variation>
                     </view>
