--- a/AppList/AppList/Base.lproj/Main.storyboard
+++ b/AppList/AppList/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="gIM-yo-vEZ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Ak5-bz-ulE">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -180,7 +180,194 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1479" y="-336"/>
+            <point key="canvasLocation" x="927" y="447"/>
+        </scene>
+        <!--Main View Controller-->
+        <scene sceneID="LBQ-F4-B93">
+            <objects>
+                <viewController id="Ak5-bz-ulE" customClass="MainViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="jdz-BR-5ZN"/>
+                        <viewControllerLayoutGuide type="bottom" id="RXo-lV-gyY"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="jXb-q5-6Qb">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="APPLIST" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XUY-4I-B1p">
+                                <rect key="frame" x="223" y="68" width="156" height="81"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="219" id="3sg-h2-Kta"/>
+                                    <constraint firstAttribute="height" constant="103" id="Eda-52-gFg"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="3sg-h2-Kta"/>
+                                        <exclude reference="Eda-52-gFg"/>
+                                    </mask>
+                                </variation>
+                                <variation key="heightClass=regular-widthClass=compact">
+                                    <mask key="constraints">
+                                        <include reference="3sg-h2-Kta"/>
+                                        <include reference="Eda-52-gFg"/>
+                                    </mask>
+                                </variation>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="98B-Ai-XY6">
+                                <rect key="frame" x="392" y="291" width="46" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="172" id="4x2-di-5kU"/>
+                                </constraints>
+                                <state key="normal" title="Lista">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="4x2-di-5kU"/>
+                                    </mask>
+                                </variation>
+                                <variation key="heightClass=regular-widthClass=compact" ambiguous="YES" misplaced="YES">
+                                    <rect key="frame" x="114" y="494" width="172" height="75"/>
+                                    <mask key="constraints">
+                                        <exclude reference="4x2-di-5kU"/>
+                                    </mask>
+                                </variation>
+                                <connections>
+                                    <action selector="listaApp:" destination="Ak5-bz-ulE" eventType="touchUpInside" id="bdG-Yl-IIK"/>
+                                    <segue destination="gIM-yo-vEZ" kind="presentation" id="MIJ-dz-Gi0"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AJa-z1-3oZ">
+                                <rect key="frame" x="157" y="285" width="46" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="136" id="jr5-Ev-CGh"/>
+                                </constraints>
+                                <state key="normal" title="Cadastro">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="jr5-Ev-CGh"/>
+                                    </mask>
+                                </variation>
+                                <variation key="heightClass=regular-widthClass=compact" ambiguous="YES" misplaced="YES">
+                                    <rect key="frame" x="132" y="221" width="136" height="89"/>
+                                    <mask key="constraints">
+                                        <exclude reference="jr5-Ev-CGh"/>
+                                    </mask>
+                                </variation>
+                                <connections>
+                                    <action selector="cadastro:" destination="Ak5-bz-ulE" eventType="touchUpInside" id="yaL-9i-OBR"/>
+                                    <segue destination="BYZ-38-t0r" kind="presentation" id="FJW-h1-4W1"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="98B-Ai-XY6" secondAttribute="trailing" constant="161" id="05p-7Q-paP"/>
+                            <constraint firstItem="98B-Ai-XY6" firstAttribute="leading" secondItem="jXb-q5-6Qb" secondAttribute="leadingMargin" constant="161" id="4TQ-xX-aJS"/>
+                            <constraint firstItem="98B-Ai-XY6" firstAttribute="top" secondItem="AJa-z1-3oZ" secondAttribute="bottom" constant="112" id="4r2-X4-KD4"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="XUY-4I-B1p" secondAttribute="trailing" constant="106" id="7BM-F6-f2T"/>
+                            <constraint firstItem="XUY-4I-B1p" firstAttribute="top" secondItem="jdz-BR-5ZN" secondAttribute="bottom" constant="50" id="9oE-w2-qh3"/>
+                            <constraint firstItem="98B-Ai-XY6" firstAttribute="top" secondItem="AJa-z1-3oZ" secondAttribute="bottom" constant="157" id="9w1-hM-vQ1"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="AJa-z1-3oZ" secondAttribute="trailing" constant="161" id="AFo-Pq-AwZ"/>
+                            <constraint firstItem="AJa-z1-3oZ" firstAttribute="top" secondItem="XUY-4I-B1p" secondAttribute="bottom" constant="75" id="AbV-uI-tbb"/>
+                            <constraint firstItem="AJa-z1-3oZ" firstAttribute="leading" secondItem="jXb-q5-6Qb" secondAttribute="leadingMargin" constant="116" id="HGZ-Wb-Alh"/>
+                            <constraint firstItem="AJa-z1-3oZ" firstAttribute="top" secondItem="XUY-4I-B1p" secondAttribute="bottom" constant="89" id="HqQ-F8-mcK"/>
+                            <constraint firstItem="AJa-z1-3oZ" firstAttribute="leading" secondItem="jXb-q5-6Qb" secondAttribute="leadingMargin" constant="161" id="IQi-ms-ihz"/>
+                            <constraint firstItem="98B-Ai-XY6" firstAttribute="top" secondItem="AJa-z1-3oZ" secondAttribute="bottom" constant="157" id="IbV-FM-wCI"/>
+                            <constraint firstItem="98B-Ai-XY6" firstAttribute="top" secondItem="AJa-z1-3oZ" secondAttribute="bottom" constant="184" id="LUW-z7-icS"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="98B-Ai-XY6" secondAttribute="trailing" constant="98" id="LoL-lu-G1r"/>
+                            <constraint firstItem="RXo-lV-gyY" firstAttribute="top" secondItem="AJa-z1-3oZ" secondAttribute="bottom" constant="490" id="Myc-Is-W3g"/>
+                            <constraint firstItem="98B-Ai-XY6" firstAttribute="leading" secondItem="jXb-q5-6Qb" secondAttribute="leadingMargin" constant="98" id="NA8-Vi-G3g"/>
+                            <constraint firstItem="AJa-z1-3oZ" firstAttribute="top" secondItem="XUY-4I-B1p" secondAttribute="bottom" constant="48" id="R7e-Do-7ET"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="AJa-z1-3oZ" secondAttribute="trailing" constant="161" id="SS0-Lg-1qy"/>
+                            <constraint firstItem="RXo-lV-gyY" firstAttribute="top" secondItem="98B-Ai-XY6" secondAttribute="bottom" constant="231" id="aLe-qt-8rP"/>
+                            <constraint firstItem="AJa-z1-3oZ" firstAttribute="leading" secondItem="jXb-q5-6Qb" secondAttribute="leadingMargin" constant="161" id="daV-t3-h0t"/>
+                            <constraint firstItem="XUY-4I-B1p" firstAttribute="top" secondItem="jdz-BR-5ZN" secondAttribute="bottom" constant="90" id="ecJ-ZT-Xlo"/>
+                            <constraint firstItem="RXo-lV-gyY" firstAttribute="top" secondItem="98B-Ai-XY6" secondAttribute="bottom" constant="303" id="gi8-uy-ccH"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="XUY-4I-B1p" secondAttribute="trailing" constant="81" id="hkg-lr-Jms"/>
+                            <constraint firstItem="XUY-4I-B1p" firstAttribute="leading" secondItem="jXb-q5-6Qb" secondAttribute="leadingMargin" constant="106" id="jcB-cf-b8w"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="AJa-z1-3oZ" secondAttribute="trailing" constant="116" id="kk0-CI-2Fu"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="98B-Ai-XY6" secondAttribute="trailing" constant="98" id="pOB-Hr-eM3"/>
+                            <constraint firstItem="XUY-4I-B1p" firstAttribute="leading" secondItem="jXb-q5-6Qb" secondAttribute="leadingMargin" constant="68" id="toN-vO-gSn"/>
+                            <constraint firstItem="AJa-z1-3oZ" firstAttribute="top" secondItem="XUY-4I-B1p" secondAttribute="bottom" constant="89" id="vbd-gB-Muo"/>
+                            <constraint firstItem="98B-Ai-XY6" firstAttribute="leading" secondItem="jXb-q5-6Qb" secondAttribute="leadingMargin" constant="98" id="yBx-R5-C9D"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="7BM-F6-f2T"/>
+                                <exclude reference="9oE-w2-qh3"/>
+                                <exclude reference="ecJ-ZT-Xlo"/>
+                                <exclude reference="hkg-lr-Jms"/>
+                                <exclude reference="jcB-cf-b8w"/>
+                                <exclude reference="toN-vO-gSn"/>
+                                <exclude reference="AFo-Pq-AwZ"/>
+                                <exclude reference="AbV-uI-tbb"/>
+                                <exclude reference="HGZ-Wb-Alh"/>
+                                <exclude reference="HqQ-F8-mcK"/>
+                                <exclude reference="IQi-ms-ihz"/>
+                                <exclude reference="R7e-Do-7ET"/>
+                                <exclude reference="SS0-Lg-1qy"/>
+                                <exclude reference="daV-t3-h0t"/>
+                                <exclude reference="kk0-CI-2Fu"/>
+                                <exclude reference="vbd-gB-Muo"/>
+                                <exclude reference="05p-7Q-paP"/>
+                                <exclude reference="4TQ-xX-aJS"/>
+                                <exclude reference="4r2-X4-KD4"/>
+                                <exclude reference="9w1-hM-vQ1"/>
+                                <exclude reference="IbV-FM-wCI"/>
+                                <exclude reference="LUW-z7-icS"/>
+                                <exclude reference="LoL-lu-G1r"/>
+                                <exclude reference="NA8-Vi-G3g"/>
+                                <exclude reference="pOB-Hr-eM3"/>
+                                <exclude reference="yBx-R5-C9D"/>
+                                <exclude reference="Myc-Is-W3g"/>
+                                <exclude reference="aLe-qt-8rP"/>
+                                <exclude reference="gi8-uy-ccH"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=regular-widthClass=compact">
+                            <mask key="constraints">
+                                <exclude reference="7BM-F6-f2T"/>
+                                <include reference="9oE-w2-qh3"/>
+                                <exclude reference="ecJ-ZT-Xlo"/>
+                                <include reference="hkg-lr-Jms"/>
+                                <exclude reference="jcB-cf-b8w"/>
+                                <include reference="toN-vO-gSn"/>
+                                <exclude reference="AFo-Pq-AwZ"/>
+                                <exclude reference="AbV-uI-tbb"/>
+                                <include reference="HGZ-Wb-Alh"/>
+                                <exclude reference="HqQ-F8-mcK"/>
+                                <exclude reference="IQi-ms-ihz"/>
+                                <include reference="R7e-Do-7ET"/>
+                                <exclude reference="SS0-Lg-1qy"/>
+                                <exclude reference="daV-t3-h0t"/>
+                                <include reference="kk0-CI-2Fu"/>
+                                <exclude reference="vbd-gB-Muo"/>
+                                <exclude reference="05p-7Q-paP"/>
+                                <exclude reference="4TQ-xX-aJS"/>
+                                <exclude reference="4r2-X4-KD4"/>
+                                <exclude reference="9w1-hM-vQ1"/>
+                                <exclude reference="IbV-FM-wCI"/>
+                                <include reference="LUW-z7-icS"/>
+                                <exclude reference="LoL-lu-G1r"/>
+                                <exclude reference="NA8-Vi-G3g"/>
+                                <include reference="pOB-Hr-eM3"/>
+                                <include reference="yBx-R5-C9D"/>
+                                <exclude reference="Myc-Is-W3g"/>
+                                <include reference="aLe-qt-8rP"/>
+                                <exclude reference="gi8-uy-ccH"/>
+                            </mask>
+                        </variation>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xc0-Rz-AMC" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-88.5" y="-344.25"/>
         </scene>
         <!--Table View Controller-->
         <scene sceneID="2YD-ZG-2VT">
@@ -253,7 +440,11 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GzI-6H-MMV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="821" y="-336"/>
+            <point key="canvasLocation" x="927" y="-344.25"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="MIJ-dz-Gi0"/>
+        <segue reference="FJW-h1-4W1"/>
+    </inferredMetricsTieBreakers>
 </document>
