--- a/AppList/AppList/Base.lproj/Main.storyboard
+++ b/AppList/AppList/Base.lproj/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Ak5-bz-ulE">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -194,7 +195,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="APPLIST" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XUY-4I-B1p">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="APPLIST" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XUY-4I-B1p">
                                 <rect key="frame" x="223" y="68" width="156" height="81"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="219" id="3sg-h2-Kta"/>
@@ -216,7 +217,7 @@
                                     </mask>
                                 </variation>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="98B-Ai-XY6">
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="98B-Ai-XY6">
                                 <rect key="frame" x="392" y="291" width="46" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="172" id="4x2-di-5kU"/>
@@ -240,7 +241,7 @@
                                     <segue destination="gIM-yo-vEZ" kind="presentation" id="MIJ-dz-Gi0"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AJa-z1-3oZ">
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AJa-z1-3oZ">
                                 <rect key="frame" x="157" y="285" width="46" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="136" id="jr5-Ev-CGh"/>
@@ -441,6 +442,117 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GzI-6H-MMV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="927" y="-344.25"/>
+        </scene>
+        <!--App View Controller-->
+        <scene sceneID="FmF-8Q-HlQ">
+            <objects>
+                <viewController id="HyS-41-Kj4" customClass="AppViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="5fL-9h-ipU"/>
+                        <viewControllerLayoutGuide type="bottom" id="SPo-Rv-sIo"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="ude-Lb-2rj">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nome" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wZ0-6Q-qh2">
+                                <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7mv-oc-DAM">
+                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                                <variation key="heightClass=regular-widthClass=compact" ambiguous="YES" misplaced="YES">
+                                    <rect key="frame" x="73" y="343" width="255" height="202"/>
+                                </variation>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Categoria" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qmi-81-RL7">
+                                <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hw0-J1-0I5">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <state key="normal" title="Button">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="177" y="659" width="46" height="30"/>
+                                </variation>
+                                <connections>
+                                    <action selector="voltarApp:" destination="HyS-41-Kj4" eventType="touchUpInside" id="33N-8S-xnq"/>
+                                    <segue destination="gIM-yo-vEZ" kind="show" id="qP3-fJ-eI5"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="7mv-oc-DAM" firstAttribute="leading" secondItem="ude-Lb-2rj" secondAttribute="leadingMargin" constant="57" id="00K-ea-7dV"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Qmi-81-RL7" secondAttribute="trailing" constant="114" id="2eZ-mT-Xoj"/>
+                            <constraint firstItem="7mv-oc-DAM" firstAttribute="top" secondItem="Qmi-81-RL7" secondAttribute="bottom" constant="124" id="9Hz-BO-xc0"/>
+                            <constraint firstItem="wZ0-6Q-qh2" firstAttribute="leading" secondItem="ude-Lb-2rj" secondAttribute="leadingMargin" constant="114" id="SuE-MH-q7r"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="7mv-oc-DAM" secondAttribute="trailing" constant="56" id="VL1-Hu-QtC"/>
+                            <constraint firstItem="Qmi-81-RL7" firstAttribute="leading" secondItem="ude-Lb-2rj" secondAttribute="leadingMargin" constant="114" id="gUi-AF-AHI"/>
+                            <constraint firstItem="Qmi-81-RL7" firstAttribute="top" secondItem="wZ0-6Q-qh2" secondAttribute="bottom" constant="120" id="nhK-2o-5XB"/>
+                            <constraint firstItem="7mv-oc-DAM" firstAttribute="top" secondItem="Qmi-81-RL7" secondAttribute="bottom" constant="124" id="pgJ-wl-PjP"/>
+                            <constraint firstItem="Qmi-81-RL7" firstAttribute="top" secondItem="wZ0-6Q-qh2" secondAttribute="bottom" constant="120" id="u0L-OM-weD"/>
+                            <constraint firstItem="wZ0-6Q-qh2" firstAttribute="top" secondItem="5fL-9h-ipU" secondAttribute="bottom" constant="38" id="uDc-6N-ORD"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="wZ0-6Q-qh2" secondAttribute="trailing" constant="114" id="w3X-hL-GRf"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="wZ0-6Q-qh2"/>
+                                <exclude reference="7mv-oc-DAM"/>
+                                <exclude reference="Qmi-81-RL7"/>
+                                <exclude reference="hw0-J1-0I5"/>
+                            </mask>
+                            <mask key="constraints">
+                                <exclude reference="2eZ-mT-Xoj"/>
+                                <exclude reference="gUi-AF-AHI"/>
+                                <exclude reference="nhK-2o-5XB"/>
+                                <exclude reference="u0L-OM-weD"/>
+                                <exclude reference="SuE-MH-q7r"/>
+                                <exclude reference="uDc-6N-ORD"/>
+                                <exclude reference="w3X-hL-GRf"/>
+                                <exclude reference="00K-ea-7dV"/>
+                                <exclude reference="9Hz-BO-xc0"/>
+                                <exclude reference="VL1-Hu-QtC"/>
+                                <exclude reference="pgJ-wl-PjP"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=regular-widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="wZ0-6Q-qh2"/>
+                                <include reference="7mv-oc-DAM"/>
+                                <include reference="Qmi-81-RL7"/>
+                                <include reference="hw0-J1-0I5"/>
+                            </mask>
+                            <mask key="constraints">
+                                <include reference="2eZ-mT-Xoj"/>
+                                <include reference="gUi-AF-AHI"/>
+                                <include reference="nhK-2o-5XB"/>
+                                <exclude reference="u0L-OM-weD"/>
+                                <include reference="SuE-MH-q7r"/>
+                                <include reference="uDc-6N-ORD"/>
+                                <include reference="w3X-hL-GRf"/>
+                                <include reference="00K-ea-7dV"/>
+                                <exclude reference="9Hz-BO-xc0"/>
+                                <include reference="VL1-Hu-QtC"/>
+                                <include reference="pgJ-wl-PjP"/>
+                            </mask>
+                        </variation>
+                    </view>
+                    <connections>
+                        <outlet property="appCategoria" destination="Qmi-81-RL7" id="aCr-j4-CH4"/>
+                        <outlet property="appNome" destination="wZ0-6Q-qh2" id="R1K-ol-zCY"/>
+                        <outlet property="imgApp" destination="7mv-oc-DAM" id="4wg-u8-gXn"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="clK-yL-oxp" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1708.5" y="-360.75"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
