arrumei e fiz a deleção funcionar

--- a/AppList/AppList/Base.lproj/Main.storyboard
+++ b/AppList/AppList/Base.lproj/Main.storyboard
@@ -622,7 +622,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
+        <segue reference="qP3-fJ-eI5"/>
         <segue reference="dp0-zm-H2K"/>
-        <segue reference="MIJ-dz-Gi0"/>
     </inferredMetricsTieBreakers>
 </document>
