--- a/AppList/AppList/Base.lproj/Main.storyboard
+++ b/AppList/AppList/Base.lproj/Main.storyboard
@@ -220,6 +220,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <toolbar key="tableFooterView" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="6dk-an-Kzu">
+                            <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                            <items>
+                                <barButtonItem title="Voltar" id="6F4-Gq-81o">
+                                    <connections>
+                                        <action selector="btnVoltar:" destination="gIM-yo-vEZ" id="3Kz-fX-EbB"/>
+                                    </connections>
+                                </barButtonItem>
+                            </items>
+                        </toolbar>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="App" rowHeight="85" id="tl1-cb-ljW" customClass="TableViewCell">
                                 <autoresizingMask key="autoresizingMask"/>
